# comfyui-pulse

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .gitignore  main.py  pyproject.toml
backend/src/server/: __init__.py  attachment.py  cli.py  events.py  server.py  utils.py
frontend/: components.json  index.html  package.json  pnpm-lock.yaml  pubspec.yaml  tsconfig.app.json  vite.config.ts
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/comfyui/pulse_app/: MainActivity.kt
frontend/lib/: main.dart
frontend/lib/models/: capture_file.dart
frontend/lib/providers/: capture_provider.dart
frontend/lib/screens/: gallery_screen.dart  settings_dialog.dart  setup_screen.dart
frontend/lib/services/: api_client.dart  settings_service.dart  storage_service.dart
frontend/lib/widgets/: capture_card.dart  empty_state.dart  lightbox.dart
frontend/src/: App.vue  api.ts  env.d.ts
frontend/src/components/: ImageGallery.vue
frontend/test/: api_client_test.dart  capture_file_test.dart  capture_provider_test.dart  widget_test.dart
frontend/windows/runner/: Runner.rc
